# wv3c

./: .gitignore  README.md  de.pascalfilippi.WolverineLinux.json  pyproject.toml  python3-deps.json
.github/workflows/: build.yml
cli/: main.py
data/: de.pascalfilippi.WolverineLinux.desktop
docs/: protocol.md
docs/captures/: allcontrollerbuttonsassignedandsomekezboardkeys.pcapng  buttonschange.pcapng  colorchange.pcapng  init.pcapng  init2.pcapng  initwithcolorsandswitchprofiles.pcapng  magentastoreandapply.pcapng
src/wolverine/: __init__.py  device.py  info.py  profile.py  rgb.py
src/wolverine/gui/: __init__.py  app.py  main_window.py  style.py  utils.py
src/wolverine/gui/pages/: customize.py  lighting.py
src/wolverine/gui/widgets/: button_dialog.py  controller.py
